@@ -38,8 +38,10 @@
 	  (define-key map (kbd "Delete") 'input-delete-forward-char)
 	  (define-key map (kbd "C-f") 'input-forward-char)
 	  (define-key map (kbd "Right") 'input-forward-char)
+	  (define-key map (kbd "M-f") 'input-forward-word)
 	  (define-key map (kbd "C-b") 'input-backward-char)
 	  (define-key map (kbd "Left") 'input-backward-char)
+	  (define-key map (kbd "M-b") 'input-backward-word)
 	  (define-key map (kbd "C-a") 'input-move-beginning-of-line)
 	  (define-key map (kbd "C-e") 'input-move-end-of-line)
 	  (define-key map (kbd "C-k") 'input-kill-line)
@@ -227,6 +229,19 @@
 	   (replace (input-line-string input) (input-line-string input)
 		    :start1 pos :start2 (1+ pos))
 	   (decf (fill-pointer (input-line-string input)))))))
+
+(defun input-forward-word (input key)
+  (declare (ignore key))
+  (let* ((p1 (position-if 'alphanumericp (input-line-string input) :start (input-line-position input)))
+	 (p2 (and p1 (position-if (complement 'alphanumericp) (input-line-string input) :start p1))))
+    (setf (input-line-position input) (or p2 (length (input-line-string input))))))
+
+(defun input-backward-word (input key)
+  (declare (ignore key))
+  (let* ((p1 (position-if 'alphanumericp (input-line-string input) :end (input-line-position input) :from-end t))
+	 (p2 (and p1 (position-if (complement 'alphanumericp) (input-line-string input) :end p1 :from-end t))))
+    (setf (input-line-position input) (or (and p2 (1+ p2))
+					  0))))
 
 (defun input-forward-char (input key)
   (declare (ignore key))
